--- a/05.md
+++ b/05.md
@@ -58,8 +58,81 @@ Przykłady kluczy naturalnych:
 - ...
 
 > [!TIP]
-> Mimo kluczy naturalnych często używa się technicznych identyfikatorów wewnętrznych
+> Mimo kluczy naturalnych często używa się identyfikatorów nie mających znaczenia biznesowego.
 
 ## Dokumentacja
 
 https://www.postgresql.org/docs/16/sql-select.html
+
+## Chwila zabawy ✏️
+
+1. Zaloguj się do pgAdmina
+2. Stwórz swoją bazę danych.
+
+```sql
+-- zamien X na swoj numer usera
+CREATE DATABASE lmsX;
+```
+
+3. Stwórz nowę połączenie na bazie danych (do bazy lmsX zamiast workshop).
+4. Pracuj już na nowym połączeniu.
+5. Stwórz podstawową strukturę:
+
+```sql
+CREATE TABLE course (
+    id BIGSERIAL PRIMARY KEY,
+    name TEXT NOT NULL
+);
+
+CREATE TABLE lesson (
+    id BIGSERIAL PRIMARY KEY,
+    course_id INTEGER NOT NULL REFERENCES course(id),
+    name TEXT NOT NULL
+);
+
+CREATE TABLE enrollment (
+    id BIGSERIAL PRIMARY KEY,
+    email TEXT NOT NULL,
+    course_id INTEGER NOT NULL REFERENCES course(id),
+    enrolled_at TIMESTAMPTZ DEFAULT now()
+);
+```
+
+6. Dodaj przykładowe dane do tabel:
+
+```sql
+INSERT INTO course (name) VALUES
+  ('Yoga Flow'),
+  ('Squash Basics'),
+  ('Volleyball Essentials');
+
+INSERT INTO lesson (course_id, name) VALUES
+-- Yoga
+(1, 'Breath & Balance'),
+(1, 'Sun Salutation Sequence'),
+
+-- Squash
+(2, 'Grip & Footwork'),
+(2, 'Serving Technique'),
+
+-- Volleyball
+(3, 'Setting Fundamentals'),
+(3, 'Team Positioning');
+
+INSERT INTO enrollment (email, course_id) VALUES
+-- Yoga
+('Anna@example.com', 1),
+('Magda@example.com', 1),
+('Kasia@example.com', 1),
+
+-- Squash
+('Julia@example.com', 2);
+```
+
+7. Przetestuj różne opcje SELECT / OFFSET / LIMIT / ORDER BY / WHERE na danych
+
+## Łączenie tabel
+
+Najczęściej będą nam potrzebne dwa typy JOINów: 
+- INNER JOIN
+- LEFT JOIN
