feat: join images

--- a/05.md
+++ b/05.md
@@ -134,5 +134,11 @@ INSERT INTO enrollment (email, course_id) VALUES
 ## Łączenie tabel
 
 Najczęściej będą nam potrzebne dwa typy JOINów: 
-- INNER JOIN
-- LEFT JOIN
+
+### INNER JOIN
+
+![join](./img_inner_join.png)
+
+### LEFT JOIN
+
+![left](./img_left_join.png)
