--- a/05.md
+++ b/05.md
@@ -142,3 +142,27 @@ Najczęściej będą nam potrzebne dwa typy JOINów:
 ### LEFT JOIN
 
 ![left](./img_left_join.png)
+
+
+### Ćwiczenia
+
+Uruchom oba zapytania i przeanalizuj różnicę:
+
+```sql
+select * from course c
+inner join enrollment e on e.course_id = c.id
+```
+
+
+```sql
+select * from course c
+left join enrollment e on e.course_id = c.id
+```
+
+> [!TIP]
+> Dodaliśmy tutaj też aliasowanie tabel, w prostych zapytaniach nie jest potrzebne, ale przy skomplikowanych zapytaniach
+> bardzo przydatne lub niemożliwe do pominięcia. Alternatywnie można użyć słowa kluczowego `AS` między tabelą a aliasem:
+> np.:
+> ```sql
+> select * from course AS c
+> ```
