--- a/05.md
+++ b/05.md
@@ -79,21 +79,26 @@ CREATE DATABASE lmsX;
 5. Stwórz podstawową strukturę:
 
 ```sql
+CREATE TABLE student (
+    id    BIGSERIAL PRIMARY KEY,
+    name  TEXT      NOT NULL
+)
+
 CREATE TABLE course (
-    id BIGSERIAL PRIMARY KEY,
-    name TEXT NOT NULL
+    id   SERIAL PRIMARY KEY,
+    name TEXT   NOT NULL
 );
 
 CREATE TABLE lesson (
-    id BIGSERIAL PRIMARY KEY,
+    id        SERIAL  PRIMARY KEY,
     course_id INTEGER NOT NULL REFERENCES course(id),
-    name TEXT NOT NULL
+    name      TEXT    NOT NULL
 );
 
 CREATE TABLE enrollment (
-    id BIGSERIAL PRIMARY KEY,
-    email TEXT NOT NULL,
-    course_id INTEGER NOT NULL REFERENCES course(id),
+    id          SERIAL      PRIMARY KEY,
+    student_id  INTEGER     NOT NULL REFERENCES student(id),
+    course_id   INTEGER     NOT NULL REFERENCES course(id),
     enrolled_at TIMESTAMPTZ DEFAULT now()
 );
 ```
@@ -101,6 +106,12 @@ CREATE TABLE enrollment (
 6. Dodaj przykładowe dane do tabel:
 
 ```sql
+INSERT INTO student (name) VALUES
+  ('Anita'),
+  ('Ewa'),
+  ('Karolina'),
+  ('Kasia');
+
 INSERT INTO course (name) VALUES
   ('Yoga Flow'),
   ('Squash Basics'),
@@ -119,17 +130,17 @@ INSERT INTO lesson (course_id, name) VALUES
 (3, 'Setting Fundamentals'),
 (3, 'Team Positioning');
 
-INSERT INTO enrollment (email, course_id) VALUES
+INSERT INTO enrollment (student_id, course_id) VALUES
 -- Yoga
-('Anna@example.com', 1),
-('Magda@example.com', 1),
-('Kasia@example.com', 1),
+(1, 1),
+(2, 1),
+(3, 1),
 
 -- Squash
-('Julia@example.com', 2);
+(4, 2);
 ```
 
-7. Przetestuj różne opcje SELECT / OFFSET / LIMIT / ORDER BY / WHERE na danych
+7. Przetestuj różne opcje SELECT / OFFSET / LIMIT / ORDER BY
 
 ## Łączenie tabel
 
@@ -145,6 +156,9 @@ Najczęściej będą nam potrzebne dwa typy JOINów:
 
 
 ### Ćwiczenia
+
+
+#### JOINy
 
 Uruchom oba zapytania i przeanalizuj różnicę:
 
@@ -166,3 +180,61 @@ left join enrollment e on e.course_id = c.id
 > ```sql
 > select * from course AS c
 > ```
+
+Dlaczego joiny są tak istotne? Wyobraź sobie, że chcesz wyświetliść na stronie kursy z ilością uczestników:
+
+
+```sql
+select
+    c.id,
+    c.name,
+    count(e.*) as total
+from course c
+join enrollment e on e.course_id = c.id
+group by c.id
+order by total desc
+```
+
+
+```sql
+select
+    c.id,
+    c.name,
+    count(e.*) as total
+from course c
+left join enrollment e on e.course_id = c.id
+group by c.id
+order by total desc
+```
+
+Moment na dyskusję o tym co zobaczyliśmy.
+
+#### Zadania
+
+1. Wyswietl listę, która pokazuje:
+- id i nazwę kursu,
+- imię uczestnika oraz kiedy dana osoba dołączyła
+
+<details>
+<summary>Wskazówka</summary>
+JOINów można używać wiecej niż raz w danym zapytaniu.
+</details>
+
+<details>
+<summary>Pełna odpowiedź</summary>
+
+```sql
+select 
+    c.id,
+    c.name,
+    s.name AS student_name,
+    e.enrolled_at
+from course c
+join enrollment e on e.course_id = c.id
+join student s on s.id = e.student_id
+```
+
+</details>
+
+2. 
+
