--- a/05.md
+++ b/05.md
@@ -160,6 +160,12 @@ Najczęściej będą nam potrzebne dwa typy JOINów:
 
 #### JOINy
 
+https://www.postgresql.org/docs/16/queries-table-expressions.html
+
+```sql
+TABELA1 typ_joina TABELA2 [ warunek ]
+```
+
 Uruchom oba zapytania i przeanalizuj różnicę:
 
 ```sql
@@ -209,7 +215,100 @@ order by total desc
 
 Moment na dyskusję o tym co zobaczyliśmy.
 
-#### Zadania
+### WHERE
+
+Operacje logiczne (`AND`, `OR`, `NOT`):
+https://www.postgresql.org/docs/current/functions-logical.html
+
+Porównania (`>`, `<`, `>=`, `<=`, `=`, `!=`):
+https://www.postgresql.org/docs/current/functions-comparison.html
+
+<table>
+    <tr>
+        <td>Operator</td>
+        <td>Warunek</td>
+        <td>Przykład w SQL</td>
+    </tr>
+    <tr>
+        <td>
+            =, !=, &lt;, &lt;=, &gt;, &gt;=
+        </td>
+        <td>Podstawowe operacje porównania</td>
+        <td>wzrost != 170</td>
+    </tr>
+    <tr>
+        <td>
+            BETWEEN … AND … 	
+        </td>
+        <td>Zawiera się pomiędzy (inclusive)</td>
+        <td>BETWEEN 160 AND 180</td>
+    </tr>
+    <tr>
+        <td>
+            IN (…)
+        </td>
+        <td>Zawiera się w liście</td>
+        <td>wzrost IN (169, 170, 171)</td>
+    </tr>
+    <tr>
+        <td>
+            LIKE
+        </td>
+        <td>Porównanie tekstu (case-sensitive)</td>
+        <td>student.name LIKE 'Ka%'</td>
+    </tr>
+</table>
+
+
+Operatory są zależne od typów danych!
+
+Funkcje:
+https://www.postgresql.org/docs/current/functions-math.html
+
+Operacje na tekście:
+https://www.postgresql.org/docs/current/functions-string.html
+
+Poniżej fragmenty różnych zapytań z warunkami (filtrowanie danych):
+
+```sql
+... WHERE wzrost >= 170    
+... WHERE wzrost >= 170 AND wzrost <= 180
+... WHERE (wzrost >= 170) AND (wzrost <= 180)
+... WHERE (wzrost >= 170 AND wzrost <= 180)
+... WHERE wzrost BETWEEN 170 AND 180
+... WHERE wzrost BETWEEN 170 AND 180 AND wiek = 30
+... WHERE (wzrost BETWEEN 170 AND 180) AND (wiek = 30)
+... WHERE NOT(wzrost >= 170)
+... WHERE wzrost < 170
+... WHERE wzrost > 170 AND wzrost < 180 OR wiek = 30
+... WHERE (wzrost > 170 AND wzrost < 180) OR wiek = 30
+... WHERE wzrost > 170 AND (wzrost < 180 OR wiek = 30)
+... WHERE imie = 'Ewa' OR imie = 'Kasia'
+... WHERE imie IN ('Ewa', 'Kasia')
+... WHERE imie NOT IN ('Ewa', 'Kasia')
+... WHERE imie LIKE 'K%' AND (wzrost >= 150 AND wzrost <= 170) AND wiek NOT IN (20, 21, 22, 23)
+... ...
+```
+
+Wartości puste tzw. `NULL`:
+
+Jeśli wartość w tabeli nie ma określonej wartości przyjmuje ona wartość `NULL`.
+NULL w bazach danych to specjalna wartość i ma specjalne zachowanie np. w agregacjach jest pomijany,
+w porównaniach z innymi wartościami zawsze zwraca NULL dlatego istnieją odpowiednie operatory porównania:
+
+```sql
+... WHERE enrollment.id IS NULL
+... WHERE enrollment.id IS NOT NULL
+```
+
+#### Praca własna
+
+Jak podejść do pisania zapytań? Zacznij prosto, od tego co wiesz, a potem doklejaj kolejne elementy.
+
+Ogólnie AI bardzo dobrze radzi sobie z pisaniem SQL,
+ale tutaj chcemy najpierw zrozumieć sens działania, a dopiero w przyszłości możemy się wyręczać,
+bo będą sytuacje gdzie AI sie pomyli lub nasze pytanie nie będzie precyzyjne,
+dlatego ważne są fundamenty, żeby potrafić zweryfikować to co wypluje AI.
 
 1. Wyswietl listę, która pokazuje:
 - id i nazwę kursu,
