--- a/05.md
+++ b/05.md
@@ -1,4 +1,4 @@
-# SQL w praktyce
+# SQL w praktyce (16:15 - 17:00)
 
 ## Najważniejsze konstrukcje SQL
 
@@ -9,6 +9,26 @@
 - **GROUP BY + agregacje** - podsumowanie danych (pozwala na odpowiedzi typu "ile / które / w jakiej liczbie".)
 - **ORDER BY** - sortowanie wyników (dla rankingów, list, analiz)
 - **LIMIT / OFFSET** - ograniczanie wyników
+
+### Anatomia zapytania (uproszczona)
+
+```sql
+SELECT jakie_kolumny FROM jaka_tabela
+JOIN kolejna_tabela ON warunek_laczenia_tabel
+WHERE warunek_filtrowania
+ORDER BY kryteria_sortowania
+LIMIT limit_wierszy OFFSET przesuniecie_wierszy
+```
+
+lub wersja z grupowaniem:
+
+```sql
+SELECT funkcja_agregujaca(jaka_kolumna), ... FROM jaka_tabela
+JOIN kolejna_tabela ON warunek_laczenia_tabel
+GROUP BY kryteria_grupowania
+```
+
+Nie wszystko jest wymagane.
 
 ## Podstawowe operacje
 
@@ -260,7 +280,7 @@ https://www.postgresql.org/docs/current/functions-comparison.html
 </table>
 
 
-Operatory są zależne od typów danych!
+**Operatory są zależne od typów danych!**
 
 Funkcje:
 https://www.postgresql.org/docs/current/functions-math.html
@@ -304,13 +324,36 @@ w porównaniach z innymi wartościami zawsze zwraca NULL dlatego istnieją odpow
 #### Praca własna
 
 Jak podejść do pisania zapytań? Zacznij prosto, od tego co wiesz, a potem doklejaj kolejne elementy.
+Jak nie wychodzi to testuj różne opcje!
 
 Ogólnie AI bardzo dobrze radzi sobie z pisaniem SQL,
 ale tutaj chcemy najpierw zrozumieć sens działania, a dopiero w przyszłości możemy się wyręczać,
 bo będą sytuacje gdzie AI sie pomyli lub nasze pytanie nie będzie precyzyjne,
 dlatego ważne są fundamenty, żeby potrafić zweryfikować to co wypluje AI.
 
-1. Wyswietl listę, która pokazuje:
+1. Policz, ile lekcji zawiera każdy kurs
+
+<details>
+<summary>Wskazówka</summary>
+GROUP BY i COUNT
+</details>
+
+<details>
+<summary>Pełna odpowiedź</summary>
+
+```sql
+select 
+    c.id,
+    c.name,
+    count(l.*) as lessons
+from course c
+left join lesson l on l.course_id = c.id
+group by c.id
+```
+
+</details>
+
+2. Wyswietl listę, która pokazuje:
 - id i nazwę kursu,
 - imię uczestnika oraz kiedy dana osoba dołączyła
 
@@ -335,5 +378,23 @@ join student s on s.id = e.student_id
 
 </details>
 
-2. 
+3. Wyświetl kursy bez żadnych uczestników
+
+<details>
+<summary>Wskazówka</summary>
+Przydatne tutaj gdzieś będzie porówanie z NULLem.
+</details>
+
+
+<details>
+<summary>Pełna odpowiedź</summary>
+
+```sql
+select c.id, c.name
+from course c
+left join enrollment e on e.course_id = c.id
+where e.id IS NULL
+```
+
+</details>
 
