--- a/06.md
+++ b/06.md
@@ -53,5 +53,106 @@ Przykładowy prompt:
 
 Dlaczego warto tak robić:
 - wymuszasz, aby AI podało uzasadnienie (łatwiej wykryć błąd),
-- określasz model danych — AI działa wtedy precyzyjniej,
+- określasz model danych - AI działa wtedy precyzyjniej,
 - dostajesz odpowiedź, którą możesz zweryfikować.
+
+Wklej prompt, do chata, a następnie skopiuj zapytanie i odpal w pgAdminie.
+
+## AI jako narzędzie do interpretacji wyników
+
+AI radzi sobie również z analizą gotowych danych.
+Możesz mu przekazać np. wyniki SELECTa lub statystyki i poprosić o interpretację:
+
+> Oto wynik zapytania (wklejam w formie tabeli).
+>
+> | course_name             | student_count |
+> | ----------------------- | ------------- |
+> | Yoga Flow	            | 3             |
+> | Squash Basics	        | 1             |
+> | Volleyball Essentials	| 0             |
+>
+> Wyjaśnij, co z niego wynika i jakie hipotezy można postawić.
+
+Warto oczywiście nadać więcej kontekstu np. skąd mamy dane, jaka rolę pełnimy, w jakim celu potrzebujemy analize itd.
+
+Oczywiście w przypadku gdzie mamy 3 kursy i małe liczby studentów to sami możemy wyciągnąć wnioski, ale zabawa się zaczyna przy większej ilości i bardziej skomplikowanych danych.
+
+## AI jako generator pytań biznesowych
+
+AI może pomóc, gdy brakuje pomysłów, co warto sprawdzić.
+
+> Mam platformę edukacyjną. Jakie są typowe metryki i pytania analityczne, które pomagają ocenić jej jakość?
+
+AI poda m.in.:
+
+- aktywność studentów w czasie,
+- procent ukończeń kursów,
+- popularność lekcji,
+- trudne momenty (bottlenecks),
+- retencja użytkowników.
+
+To świetne narzędzie do burzy mózgów - szczególnie jeśli uczestnicy nie mają doświadczenia w produktach edukacyjnych.
+
+## Czy AI się myli?
+
+TAK!
+
+Domyśla się struktury danych, jeśli nie podasz modelu - AI go wymyśli.
+Zdarza mu się łączyć tabele przez złe klucze albo zapomina o warunku JOIN itp.
+
+Dlatego zawsze:
+- czytaj dokładnie wygenerowane zapytanie,
+- przetestuj je na małym SELECT *,
+- zwróć uwagę, czy liczby mają sens.
+
+Złota zasada:
+**AI to przyspieszacz, nie zastępstwo myślenia.**
+
+## Jak prosić AI o analizę - dobre wzorce promptów
+
+Prompt 1 - generowanie SQL:
+
+> Oto struktura bazy: [schema].
+> Chcę zapytanie, które zwróci listę kursów z liczbą zapisanych studentów. Pokaż kod oraz krótko wyjaśnij logikę.
+
+Prompt 2 - wytłumaczenie SQL:
+
+> Wyjaśnij działanie tego zapytania krok po kroku:
+> SELECT ...
+
+Prompt 3 - debugging SQL
+
+> To zapytanie zwraca zbyt dużo wyników.
+> Zasugeruj, co może być nie tak, biorąc pod uwagę mój model danych: [schema].
+> Nie poprawiaj zapytania tylko wskaż możliwe problemy.
+
+Prompt 4 - interpretacja wyników
+
+> Oto wynik zapytania (tabela poniżej).
+> [tabela]
+>
+> Jakie wnioski można z tego wyciągnąć?
+> Podaj 3 interpretacje i 3 możliwe kierunki dalszej analizy.
+
+Prompt 5 - generowanie pytań biznesowych
+
+> Na podstawie tego modelu danych: [schema],
+> wygeneruj listę 10 sensownych pytań analitycznych, które pomagają ocenić jakość kursów.
+
+# Podsumowanie
+
+AI pomaga, gdy:
+
+- znasz pytanie, ale SQL jest długi,
+- masz wyniki, ale trudno je zinterpretować,
+- musisz wymyślić, co jeszcze warto sprawdzić,
+- chcesz zrozumieć działanie obcego zapytania.
+
+AI zawodzi, gdy:
+
+- nie znasz modelu danych,
+- liczysz, że "zrobi wszystko za ciebie",
+- nie weryfikujesz wyników.
+
+Największa wartość AI w pracy z danymi:
+**daje wsparcie w analizie i myśleniu, ale decyzje i weryfikacja nadal są po stronie człowieka.**
