--- a/05.md
+++ b/05.md
@@ -100,9 +100,9 @@ CREATE DATABASE lmsX;
 
 ```sql
 CREATE TABLE student (
-    id    BIGSERIAL PRIMARY KEY,
+    id    SERIAL PRIMARY KEY,
     name  TEXT      NOT NULL
-)
+);
 
 CREATE TABLE course (
     id   SERIAL PRIMARY KEY,
